src/main/java/org/example/polify/common/error/FieldErrorResponse.java
package org.example.polify.common.error;

public record FieldErrorResponse(
    String field,
    String message
) {
}

